Added partial support for etymologies